# OopsNote

./: .env.example  .gitignore  AGENTS.md  README  README.md  _tmp_last_logs.txt  cli.py  config.py  core copy.py  core.py  export.py  generate.py  log.py  logger.py  main.py  markdown.py  models.py  prompt copy.md  prompt.md  queue_persistence.py  requirements.txt  save.py  tags.toml  telegram_bot.py  test_core.py
.github/: copilot-instructions.md
.github/workflows/: backend-ci.yml  frontend-ci.yml  pylint.yml  vercel-deploy.yml
_tmp/: test.tex
_tmp_image_cropper/: README.md  crop.py
backend/: .env.example  .pylintrc  ARCHITECTURE.md  PYLINT_REPORT.md  README.md  README_AGENT_CONFIG.md  agent_config.example.toml  models_head.txt  mypy.ini  pylint_issues.txt  pylint_report.txt  pyproject.toml  test_e2e_sse.py  test_sse_complete.py
backend/app/: agent_settings.py  app_state.py  application.py  auth_settings.py  bootstrap.py  builders.py  config.py  config_main.py  default_tags_builtin.json  default_tags_seed.py  domain.py  env.py  gateway.py  http_logging.py  llm_logging.py  llm_schemas.py  main.py  models.py  protocols.py  repository.py  request_context.py  startup_hooks.py  storage.py  tags.py  trace.py
backend/app/agents/: agent_flow.py  extractor.py  pipeline.py  stages.py  utils.py
backend/app/agents/prompts/: diagram.md  ocr.md  ocr.txt  ocr_retry.txt  segmenter.md  solver.txt  tagger.md  tagger.txt
backend/app/agents/skills/ocr/: chemfig.txt
backend/app/agents/skills/solver/: chemfig.txt
backend/app/agents/skills/tagger/: chemfig.txt
backend/app/api/: __init__.py  account.py  agent_settings.py  auth.py  debug_tasks.py  deps.py  health.py  latex.py  models.py  papers.py  problems.py  tags.py  tasks.py  users.py
backend/app/auth/: __init__.py  deps.py  security.py
backend/app/clients/: __init__.py  base.py  factory.py  gemini_client.py  openai_client copy.py  openai_client.py  stub.py
backend/app/clients/prompts/: json_only_suffix.txt  solution_system.txt  solution_user_suffix.txt  tagging_system.txt  tagging_user_suffix.txt
backend/app/config/: __init__.py  app.py  env.py  security.py  subjects.py
backend/app/models/: __init__.py  api.py  auth.py  common.py  library.py  pipeline.py  problem.py  task.py
backend/app/services/: agent_settings.py  auth_settings.py  event_bus.py  login_store.py  models_service.py  sse_service.py  tag_sync_service.py  tasks_service.py  user_store.py
backend/app/templates/: README_TEMPLATES.md  paper.tex  question_formats.tex  section_headers.tex
backend/dev_seed/tasks/: chem-demo-1.json
backend/scripts/: cli_test.py  reset_test_password.py  seed_demo_tasks.py  test_login_debug.py  test_refactor.py  test_upload_validation.py
backend/storage/settings/: agent_enabled.json  agent_models.json  agent_settings.json  agent_temperature.json  agent_thinking.json  debug.json  tag_conflicts.json  tag_dimensions.json  tag_sync_conflicts.json  tags.json  tags_builtin.json  users.json
backend/tests/: test_agent_enabled_settings.py  test_agent_required_fields.py  test_debug_multipage_demo_route.py  test_debug_simulate_route.py  test_default_tags_seed.py  test_json_parsing.py  test_models_reading.py  test_ocr_router.py  test_openai_client_thinking.py  test_pipeline.py  test_pipeline_runtime_ports.py  test_runtime_settings_port.py  test_task_repository_persistence.py  test_trace_logging.py
docs/: ARCHITECTURE.md  ARCHITECTURE_REFACTOR_REPORT.md  CODE_CLEANUP_REPORT.md  CONFIG_CLEANUP_REPORT.md  CONFIG_GUIDE.md  POLLING_QUICK_REFERENCE.md  REFACTOR_QUICK_REFERENCE.md  REFACTOR_SUMMARY.md  SSE_TEST_IMPLEMENTATION.md  SSE_TO_POLLING_MIGRATION.md
docs/archive/: SSE_CLEANUP_AND_MERGE.md  SSE_TROUBLESHOOTING.md
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  page.tsx
scripts/: extract_last_response.py
tests/: test copy.py  test.py  test_core.py  test_queue_persistence.py  tt.py
(+125 files in other folders)
