[project]
name = "oopsnote-backend"
version = "0.1.0"
description = "FastAPI orchestration service for OopsNote"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "pydantic>=2.9.0",
  "openai>=1.55.0",
  "Pillow>=10.0.0",
  "python-dotenv>=1.0.1",
]

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["storage*", "tests*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
